--- a/functions/package.json
+++ b/functions/package.json
@@ -13,10 +13,13 @@
   },
   "main": "index.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.0.1",
+    "google-auth-library": "^10.3.0",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.5",
-    "cors": "^2.8.5"
+    "simple-git": "^3.22.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
