--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.0",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
